Remove padding and fix slider cutting issue on mobile

--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -322,7 +322,7 @@
   }
 
   .carousel-slide {
-    padding: 50px 40px;
+    padding: 30px 0;
   }
 
   .work-image img {
@@ -346,7 +346,17 @@
 
 @media only screen and (max-width: 600px) {
   .carousel-slide {
-    padding: 40px 35px;
+    padding: 20px 0;
+  }
+
+  .carousel-track {
+    width: 100%;
+  }
+
+  .carousel-slide {
+    min-width: 100%;
+    padding: 20px 10px;
+    box-sizing: border-box;
   }
 
   .carousel-info {
